my persional portfolio details

--- a/index.html
+++ b/index.html
@@ -1,31 +1,68 @@
 <!DOCTYPE html>
+
 <html lang="en">
 <head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>web_larner</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Document</title>
 </head>
+
 <body>
+<center>
+	<h1><u>My Portfolio</u></h1>
+	<abbr title="mahmud-pranto"><img width="200" height="200" src="asset/image/_n.jpg" alt="my Profile pic"></abbr>
+	<h2>Mahmud_Pranto</h2>
+	<h3>Web Designer</h3>
+	<address>Dhaka,Bangladesh</address><br>
+	<a href="https://facebook.com/abufattal.pranto"><abbr title="facebook"><img width="20" src="asset/image/fb.png" alt="facebook"></abbr></a>	
+	<a href="https://youtube.com/web mahmud"><abbr title="youtube"><img width="30" src="asset/image/1you.png" alt="youtube"></abbr></a>	
+	<a href="https://twitter.com/mahmud9710"><abbr title="twitter"><img width="20" src="asset/image/twitter.png" alt="twitter"></abbr></a>			
+	<a href="https://www.linkedin.com/in/abu-fattal-ibna-mahmud"><abbr title="linkdin"><img width="20" src="asset/image/linkedin.png" alt="linkdin"></abbr></a>	
+	<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Natus eos debitis, similique quas illo, repudiandae? Blanditiis maiores ipsa ipsam, placeat aliquam cumque, totam voluptas eum sapiente laboriosam ab natus, perferendis.</p>
+	<hr>
 	
-	<h1><b>WORDPRESS AND WEB DESIGN</b></h1>
-	<h3><u><i>What we learn from this course</i></u></h3>
-	<h4><strong>short describtion:</strong></h4>
-	<p>*optio tempore hic nesciunt minus amet</p>
-	<p>*optio tempore hic nesciunt minus amet</p>
-	<p>*optio tempore hic nesciunt minus amet</p>
-	<p>*optio tempore hic nesciunt minus amet</p>
-	<p>*optio tempore hic nesciunt minus amet</p>
-    <h4><strong>Long describtion:</strong></h4>
-	<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis omnis fugit tempora, laudantium dicta ducimus enim, nam optio tempore hic nesciunt minus amet sit odit debitis delectus excepturi consequatur laborum quasi aspernatur ipsa. Alias veritatis soluta delectus dignissimos minus laborum perspiciatis illum magnam. At cum alias rerum sapiente quas totam! Numquam ducimus nisi ab odio sed perferendis incidunt, eveniet architecto obcaecati id deleniti, alias repellat veritatis assumenda illum corporis iusto. Porro eius, asperiores odit, minus quidem, ut est quia sint labore dolor optio, vero a saepe molestiae eos sequi quod. Ipsa possimus placeat repellat, excepturi architecto vitae unde aliquam, magni.</p>
-	<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis omnis fugit tempora, laudantium dicta ducimus enim, nam optio tempore hic nesciunt minus amet sit odit debitis delectus excepturi consequatur laborum quasi aspernatur ipsa. Alias veritatis soluta delectus dignissimos minus laborum perspiciatis illum magnam. At cum alias rerum sapiente quas totam! Numquam ducimus nisi ab odio sed perferendis incidunt, eveniet architecto obcaecati id deleniti, alias repellat veritatis assumenda illum corporis iusto. Porro eius, asperiores odit, minus quidem, ut est quia sint labore dolor optio, vero a saepe molestiae eos sequi quod. Ipsa possimus placeat repellat, excepturi architecto vitae unde aliquam, magni.</p>
-	<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis omnis fugit tempora, laudantium dicta ducimus enim, nam optio tempore hic nesciunt minus amet sit odit debitis delectus excepturi consequatur laborum quasi aspernatur ipsa. Alias veritatis soluta delectus dignissimos minus laborum perspiciatis illum magnam. At cum alias rerum sapiente quas totam! Numquam ducimus nisi ab odio sed perferendis incidunt, eveniet architecto obcaecati id deleniti, alias repellat veritatis assumenda illum corporis iusto. Porro eius, asperiores odit, minus quidem, ut est quia sint labore dolor optio, vero a saepe molestiae eos sequi quod. Ipsa possimus placeat repellat, excepturi architecto vitae unde aliquam, magni.</p>
+	<h2><u>Give Your Information</u></h2>
+	<form>
+	Gender: 	
+	<input name="gender" type="radio" id="male"><label for="male">Male</label>
+	<input name="gender" type="radio" id="female"><label for="female">Female</label><br><br>
+
+    Name <br>
+	<input type="text" placeholder="Full name"><br><br>
+	Email <br>
+	<input type="email" placeholder="Email"><br><br>
+    Linkdin <br>
+	<input type="url" placeholder="Linkdin"><br><br>
+	Skype <br>
+	<input type="url" placeholder="Skype"><br><br>
+	Cell num <br>
+	<input type="tel" placeholder="Cell"><br><br>
+	<textarea placeholder="Your Project Details"></textarea><br><br>
+	<input type="file"><br><br>
+	Project Budget (Dollar) <br>
+	<input type="number" placeholder="Project Budget"> $ <br><br>
+	Project Duration <br>
+	<input type="number" placeholder="Enter Days"> Days<br><br>
+	<input type="checkbox" id="agree"><label for="agree">I Agree to submit</label><br><br>
+	<input type="submit" value="Send">
+    </form>
+</center>
+
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
 
 
-<h5><big>Cousrce Prize Is : <del>12000</del><strong>7000</strong>(discount)</big></h5>
+    
 
 
 
 
-
+					
 </body>
-</html>									
+
+</html>				
